<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waver_docking</name>
  <version>1.0.0</version>
  <description>Project to implement a docking algorithm based on a PID modification.</description>
  <maintainer email="alejodiscovery20@gmail.com">Alejandro Daniel Jose Gomez Florez</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen3_cmake_module</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
