<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waver_docking</name>
  <version>0.0.1</version>
  <description>A ROS2 package for robot docking visualization and control</description>
  <maintainer email="alejodiscovery20@gmail.com">Alejandro Gomez Florez (aldajo92)</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen</depend>
  
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>interactive_markers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
